--- a/models/draft.ipynb
+++ b/models/draft.ipynb
@@ -2,29 +2,178 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_fsc22 = './data/fsc22'\n",
-    "dir_esc50 = './data/esc50'\n"
+    "dir_fsc22 = '../data/fsc22'\n",
+    "dir_esc50 = '../data/esc50'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source File Name</th>\n",
+       "      <th>Dataset File Name</th>\n",
+       "      <th>Class ID</th>\n",
+       "      <th>Class Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>17548__A.wav</td>\n",
+       "      <td>1_10101.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>17548_B.wav</td>\n",
+       "      <td>1_10102.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17548_C.wav</td>\n",
+       "      <td>1_10103.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>17548_D.wav</td>\n",
+       "      <td>1_10104.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17548_E.wav</td>\n",
+       "      <td>1_10105.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>164882__timsc__squirrel-call.wav</td>\n",
+       "      <td>27_12771.wav</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Squirrel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>162648__cognito-perceptu__park-bench-atmospher...</td>\n",
+       "      <td>27_12772.wav</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Squirrel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>122260__echobones__angry-squirrel-long.wav</td>\n",
+       "      <td>27_12773.wav</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Squirrel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>82828__noisecollector__angrysquirrel-creepingt...</td>\n",
+       "      <td>27_12774.wav</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Squirrel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024</th>\n",
+       "      <td>82829__noisecollector__angrysquirrel-flyingair...</td>\n",
+       "      <td>27_12775.wav</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Squirrel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2025 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Source File Name Dataset File Name  \\\n",
+       "0                                          17548__A.wav       1_10101.wav   \n",
+       "1                                           17548_B.wav       1_10102.wav   \n",
+       "2                                           17548_C.wav       1_10103.wav   \n",
+       "3                                           17548_D.wav       1_10104.wav   \n",
+       "4                                           17548_E.wav       1_10105.wav   \n",
+       "...                                                 ...               ...   \n",
+       "2020                   164882__timsc__squirrel-call.wav      27_12771.wav   \n",
+       "2021  162648__cognito-perceptu__park-bench-atmospher...      27_12772.wav   \n",
+       "2022         122260__echobones__angry-squirrel-long.wav      27_12773.wav   \n",
+       "2023  82828__noisecollector__angrysquirrel-creepingt...      27_12774.wav   \n",
+       "2024  82829__noisecollector__angrysquirrel-flyingair...      27_12775.wav   \n",
+       "\n",
+       "      Class ID Class Name  \n",
+       "0            1       Fire  \n",
+       "1            1       Fire  \n",
+       "2            1       Fire  \n",
+       "3            1       Fire  \n",
+       "4            1       Fire  \n",
+       "...        ...        ...  \n",
+       "2020        27   Squirrel  \n",
+       "2021        27   Squirrel  \n",
+       "2022        27   Squirrel  \n",
+       "2023        27   Squirrel  \n",
+       "2024        27   Squirrel  \n",
+       "\n",
+       "[2025 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_esc50 = pd.read_csv(os.path.join(dir_fsc22,'metadata.csv'))\n",
+    "df_esc50 "
+   ]
   }
  ],
  "metadata": {
