--- a/models/draft.ipynb
+++ b/models/draft.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,6 +661,21 @@
     "n_mfcc = 20\n",
     "denoise = False\n",
     "data_dir = os.path.join(dir_fsc22,'audio')\n",
+    "\n",
+    "def get_cuda_device():\n",
+    "    import torch\n",
+    "\n",
+    "    # Check if GPUs are available\n",
+    "    if torch.cuda.is_available():\n",
+    "        # Set the default device to GPU\n",
+    "        torch.cuda.set_device(0)  # Specify the GPU device index if using multiple GPUs\n",
+    "        device = torch.device(\"cuda\")\n",
+    "    else:\n",
+    "        # Set the default device to CPU\n",
+    "        # torch.set_default_tensor_type('torch.FloatTensor')\n",
+    "        device = torch.device(\"cpu\")\n",
+    "\n",
+    "    return device\n",
     "\n",
     "def extract_spectrogram(values, clip, entries):\n",
     "\tfor data in entries:\n",
@@ -696,7 +711,9 @@
     "\t\tentries = audios.loc[audios[\"filename\"]==audio].to_dict(orient=\"records\")\n",
     "\t\textract_spectrogram(values, clip, entries)\n",
     "\t\tprint(\"Finished audio {}\".format(audio))\n",
-    "\treturn values\n"
+    "\treturn values\n",
+    "\n",
+    "device = get_cuda_device()"
    ]
   },
   {
