--- a/models/draft2.ipynb
+++ b/models/draft2.ipynb
@@ -3395,7 +3395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3409,6 +3409,21 @@
    ],
    "source": [
     "# Validate the model\n",
+    "# Recreate the model architecture\n",
+    "model = models.resnet34(weights=None)  # Replace with the correct function to load ResNet34 without pretrained weights\n",
+    "num_ftrs = model.fc.in_features\n",
+    "model.fc = nn.Linear(num_ftrs, 27)  # Assuming 27 is the number of classes\n",
+    "\n",
+    "# Load the saved model parameters\n",
+    "model_path = './model/trained_model.pth'\n",
+    "model.load_state_dict(torch.load(model_path))\n",
+    "\n",
+    "# Move the model to the GPU if available\n",
+    "device = get_cuda_device()\n",
+    "model = model.to(device)\n",
+    "\n",
+    "\n",
+    "\n",
     "model.eval()\n",
     "correct = 0\n",
     "total = 0\n",
@@ -3425,6 +3440,62 @@
     "# Show a validation value\n",
     "validation_value = 100 * correct / total\n",
     "print(f\"Validation value (Accuracy): {validation_value:.2f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the test images: 82.35%\n",
+      "Precision of the network on the test images: 0.83\n",
+      "F1 Score of the network on the test images: 0.81\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\001Drexel\\99_hackathon\\4_CODEFEST2024\\Philly-Codefest\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, f1_score\n",
+    "import numpy as np\n",
+    "\n",
+    "# Lists to store true labels and predicted labels\n",
+    "true_labels = []\n",
+    "predicted_labels = []\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in test_loader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        \n",
+    "        # Append the labels to the lists\n",
+    "        true_labels.extend(labels.cpu().numpy())\n",
+    "        predicted_labels.extend(predicted.cpu().numpy())\n",
+    "\n",
+    "# Convert lists to numpy arrays for metric calculation\n",
+    "true_labels = np.array(true_labels)\n",
+    "predicted_labels = np.array(predicted_labels)\n",
+    "\n",
+    "# Calculate metrics\n",
+    "accuracy = accuracy_score(true_labels, predicted_labels)\n",
+    "precision = precision_score(true_labels, predicted_labels, average='weighted')  # Use 'micro' or 'macro' as needed\n",
+    "f1 = f1_score(true_labels, predicted_labels, average='weighted')  # Use 'micro' or 'macro' as needed\n",
+    "\n",
+    "print(f'Accuracy of the network on the test images: {accuracy * 100:.2f}%')\n",
+    "print(f'Precision of the network on the test images: {precision:.2f}')\n",
+    "print(f'F1 Score of the network on the test images: {f1:.2f}')"
    ]
   },
   {
