update trained model

--- a/models/draft2.ipynb
+++ b/models/draft2.ipynb
@@ -8,10 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "# import preprocessing_pipeline as pppp\n",
     "import librosa\n",
-    "import yaml\n",
-    "# from main import *"
+    "import yaml"
    ]
   },
   {
@@ -57,6 +55,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = get_cuda_device()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +206,7 @@
        "[2025 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,47 +253,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_rate = 44100\n",
-    "segment_length = 5\n",
-    "n_fft = 4410\n",
-    "n_mels = 128\n",
-    "n_mfcc = 20\n",
-    "denoise = False\n",
+    "# sample_rate = 44100\n",
+    "# segment_length = 5\n",
+    "# n_fft = 4410\n",
+    "# n_mels = 128\n",
+    "# n_mfcc = 20\n",
+    "# denoise = False\n",
     "\n",
-    "params_path = \"params.yml\"\n",
-    "with open(params_path, \"r\") as file:\n",
-    "    params = yaml.safe_load(file)\n",
+    "# params_path = \"params.yml\"\n",
+    "# with open(params_path, \"r\") as file:\n",
+    "#     params = yaml.safe_load(file)\n",
     "\n",
-    "algo = params[\"algorithm\"]\n",
-    "batch_size = int(algo[\"params\"][\"batch_size\"])\n",
-    "n_epochs = 50\n",
-    "patience = int(algo[\"params\"][\"patience\"])\n",
-    "learning_rate = 0.01\n",
+    "# algo = params[\"algorithm\"]\n",
+    "# batch_size = int(algo[\"params\"][\"batch_size\"])\n",
+    "# n_epochs = 50\n",
+    "# patience = int(algo[\"params\"][\"patience\"])\n",
+    "# learning_rate = 0.01\n",
     "\n",
-    "model_dir = \"./model/cnn\"\n",
-    "if not os.path.exists(model_dir):\n",
-    "    os.makedirs(model_dir)\n",
-    "model_save_path = os.path.join(model_dir, \"model.pkl\")\n",
+    "# model_dir = \"./model/cnn\"\n",
+    "# if not os.path.exists(model_dir):\n",
+    "#     os.makedirs(model_dir)\n",
+    "# model_save_path = os.path.join(model_dir, \"model.pkl\")\n",
     "\n",
-    "demo_model_path = \"./model/demo\"\n",
-    "if not os.path.exists(demo_model_path):\n",
-    "    os.makedirs(demo_model_path)\n",
+    "# demo_model_path = \"./model/demo\"\n",
+    "# if not os.path.exists(demo_model_path):\n",
+    "#     os.makedirs(demo_model_path)\n",
     "\n",
-    "device = get_cuda_device()\n",
+    "# device = get_cuda_device()\n",
     "\n",
-    "# # CNN\n",
-    "# PATH = \"./model/basecnn200\"\n",
-    "# model_set = torch.load(f\"{PATH}/model.pt\")\n",
-    "# clf_pre = model_set[\"model\"]"
+    "# # # CNN\n",
+    "# # PATH = \"./model/basecnn200\"\n",
+    "# # model_set = torch.load(f\"{PATH}/model.pt\")\n",
+    "# # clf_pre = model_set[\"model\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +302,7 @@
        "'../data/fsc22\\\\audio'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +463,7 @@
        "4      17548_E.wav  1_10105.wav       1       Fire"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +494,7 @@
        "list"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +515,7 @@
        "(3, 128, 250)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +703,7 @@
        "[2025 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +878,7 @@
        "[102 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2976,37 +2983,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 1.9996301307052862\n",
-      "Epoch 2, Loss: 1.2672137823261198\n",
-      "Epoch 3, Loss: 1.0564499311759823\n",
-      "Epoch 4, Loss: 0.8165572471305972\n",
-      "Epoch 5, Loss: 0.5800058304286394\n",
-      "Epoch 6, Loss: 0.6047103326828753\n",
-      "Epoch 7, Loss: 0.5452544632993761\n",
-      "Epoch 8, Loss: 0.450739498265454\n",
-      "Epoch 9, Loss: 0.39666888514747384\n",
-      "Epoch 10, Loss: 0.4167737749512078\n",
-      "Epoch 11, Loss: 0.507179071546578\n",
-      "Epoch 12, Loss: 0.2501300772438284\n",
-      "Epoch 13, Loss: 0.2781327307590696\n",
-      "Epoch 14, Loss: 0.3049892606061013\n",
-      "Epoch 15, Loss: 0.23182740703713697\n",
-      "Epoch 16, Loss: 0.14561733463015714\n",
-      "Epoch 17, Loss: 0.12866538477542458\n",
-      "Epoch 18, Loss: 0.08985985073520512\n",
-      "Epoch 19, Loss: 0.11017848187904866\n",
-      "Epoch 20, Loss: 0.11943385363785458\n",
-      "Epoch 21, Loss: 0.313740108589657\n",
-      "Epoch 22, Loss: 0.4252350632040227\n",
-      "Epoch 23, Loss: 0.2687349748782447\n",
-      "Epoch 24, Loss: 0.16614385570597942\n"
+      "Epoch 1, Loss: 1.9284093770824495\n",
+      "Epoch 2, Loss: 1.2083349657840416\n"
      ]
     },
     {
@@ -3016,7 +3001,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 33\u001b[0m\n\u001b[0;32m     30\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m     31\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m---> 33\u001b[0m     running_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrunning_loss\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(train_loader)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[23], line 33\u001b[0m\n\u001b[0;32m     30\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[0;32m     31\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m---> 33\u001b[0m     running_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Loss: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrunning_loss\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(train_loader)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -3091,7 +3076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3135,16 +3120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([18,  5,  4, 24,  3, 11])"
+       "tensor([ 3, 17, 22, 16,  8,  3])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3155,7 +3140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3204,7 +3189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3276,45 +3261,6 @@
    ],
    "source": [
     "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files moved successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# df_test[['filename','target']].to_csv('./train.csv',index = False)\n",
-    "# import os\n",
-    "# import shutil\n",
-    "\n",
-    "# # Define the source and destination directories\n",
-    "# source_dir = \"../data/fsc22/audio\"\n",
-    "# destination_dir = \"../data/train\"\n",
-    "\n",
-    "# # Create the destination directory if it does not exist\n",
-    "# if not os.path.exists(destination_dir):\n",
-    "#     os.makedirs(destination_dir)\n",
-    "\n",
-    "# # Iterate over the filenames in the df_train DataFrame\n",
-    "# for filename in df_test['filename']:\n",
-    "#     # Construct the full file path for the source and destination\n",
-    "#     source_file = os.path.join(source_dir, filename)\n",
-    "#     destination_file = os.path.join(destination_dir, filename)\n",
-    "\n",
-    "#     # Move the file from the source to the destination\n",
-    "#     shutil.move(source_file, destination_file)\n",
-    "\n",
-    "# print(\"Files moved successfully.\")\n",
-    "\n"
    ]
   }
  ],
