--- a/models/sagemaker.ipynb
+++ b/models/sagemaker.ipynb
@@ -1136,6 +1136,63 @@
     "# Start the training job\n",
     "estimator.fit(data_channels)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f83bb550",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m signal, sr \u001b[38;5;241m=\u001b[39m librosa\u001b[38;5;241m.\u001b[39mload(audio_path, sr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m44100\u001b[39m, mono\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Create a JSON object with the signal and sample rate\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m input_json \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mdumps({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msignal\u001b[39m\u001b[38;5;124m'\u001b[39m: signal\u001b[38;5;241m.\u001b[39mtolist(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msr\u001b[39m\u001b[38;5;124m'\u001b[39m: sr})\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Simulate SageMaker's input_fn with JSON content\u001b[39;00m\n\u001b[0;32m     18\u001b[0m input_data \u001b[38;5;241m=\u001b[39m inference\u001b[38;5;241m.\u001b[39minput_fn(input_json, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapplication/json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# test_inference.py\n",
+    "import torch\n",
+    "from my_model.code import inference  # This is the inference.py script you created\n",
+    "import librosa\n",
+    "import json\n",
+    "\n",
+    "# Simulate SageMaker's model_fn\n",
+    "model_dir = './my_model'  # Replace with the path to your model directory\n",
+    "model = inference.model_fn(model_dir)\n",
+    "\n",
+    "# Load a sample audio file using librosa\n",
+    "audio_path = '../data/train/1_10142.wav'  # Replace with the path to your audio file\n",
+    "signal, sr = librosa.load(audio_path, sr=44100, mono=True)\n",
+    "\n",
+    "# Create a JSON object with the signal and sample rate\n",
+    "input_json = json.dumps({'signal': signal.tolist(), 'sr': sr})\n",
+    "\n",
+    "# Simulate SageMaker's input_fn with JSON content\n",
+    "input_data = inference.input_fn(input_json, 'application/json')\n",
+    "\n",
+    "# Simulate SageMaker's predict_fn\n",
+    "prediction = inference.predict_fn(input_data, model)\n",
+    "\n",
+    "# Simulate SageMaker's output_fn\n",
+    "output = inference.output_fn(prediction, 'application/json')\n",
+    "\n",
+    "# Print the output\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de5d27cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1154,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
