--- a/models/sagemaker.ipynb
+++ b/models/sagemaker.ipynb
@@ -1144,14 +1144,13 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m signal, sr \u001b[38;5;241m=\u001b[39m librosa\u001b[38;5;241m.\u001b[39mload(audio_path, sr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m44100\u001b[39m, mono\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Create a JSON object with the signal and sample rate\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m input_json \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mdumps({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msignal\u001b[39m\u001b[38;5;124m'\u001b[39m: signal\u001b[38;5;241m.\u001b[39mtolist(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msr\u001b[39m\u001b[38;5;124m'\u001b[39m: sr})\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Simulate SageMaker's input_fn with JSON content\u001b[39;00m\n\u001b[0;32m     18\u001b[0m input_data \u001b[38;5;241m=\u001b[39m inference\u001b[38;5;241m.\u001b[39minput_fn(input_json, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mapplication/json\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(1, 3, 128, 250)\n",
+      "torch.Size([1, 3, 128, 250]) cuda\n",
+      "{'class': 1, 'confidence': 0.9617887735366821}\n"
      ]
     }
    ],
@@ -1168,7 +1167,7 @@
     "\n",
     "# Load a sample audio file using librosa\n",
     "audio_path = '../data/train/1_10142.wav'  # Replace with the path to your audio file\n",
-    "signal, sr = librosa.load(audio_path, sr=44100, mono=True)\n",
+    "signal, sr = librosa.load(audio_path, sr=None, mono=True)\n",
     "\n",
     "# Create a JSON object with the signal and sample rate\n",
     "input_json = json.dumps({'signal': signal.tolist(), 'sr': sr})\n",
@@ -1176,6 +1175,9 @@
     "# Simulate SageMaker's input_fn with JSON content\n",
     "input_data = inference.input_fn(input_json, 'application/json')\n",
     "\n",
+    "\n",
+    "print(type(input_data))\n",
+    "print(input_data.shape)\n",
     "# Simulate SageMaker's predict_fn\n",
     "prediction = inference.predict_fn(input_data, model)\n",
     "\n",
