--- a/models/sample_deploy.ipynb
+++ b/models/sample_deploy.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,18 +56,18 @@
     "import json\n",
     "\n",
     "# Simulate SageMaker's model_fn\n",
-    "model_dir = './'  # Replace with the path to your model directory\n",
+    "model_dir = \"./\"  # Replace with the path to your model directory\n",
     "model = inference.model_fn(model_dir)\n",
     "\n",
     "# Load a sample audio file using librosa\n",
-    "audio_path = '../data/test/1_10123.wav'  # Replace with the path to your audio file\n",
+    "audio_path = \"../data/test/1_10123.wav\"  # Replace with the path to your audio file\n",
     "signal, sr = librosa.load(audio_path, sr=None, mono=True)\n",
     "\n",
     "# Create a JSON object with the signal and sample rate\n",
-    "input_json = json.dumps({'signal': signal.tolist(), 'sr': sr})\n",
+    "input_json = json.dumps({\"signal\": signal.tolist(), \"sr\": sr})\n",
     "\n",
     "# Simulate SageMaker's input_fn with JSON content\n",
-    "input_data = inference.input_fn(input_json, 'application/json')\n",
+    "input_data = inference.input_fn(input_json, \"application/json\")\n",
     "\n",
     "\n",
     "print(type(input_data))\n",
@@ -76,10 +76,72 @@
     "prediction = inference.predict_fn(input_data, model)\n",
     "\n",
     "# Simulate SageMaker's output_fn\n",
-    "output = inference.output_fn(prediction, 'application/json')\n",
+    "output = inference.output_fn(prediction, \"application/json\")\n",
     "\n",
     "# Print the output\n",
-    "print(output)\n"
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_human(output_data):\n",
+    "    sound_dict = {\n",
+    "        0: \"Fire\",\n",
+    "        1: \"Rain\",\n",
+    "        2: \"Thunderstorm\",\n",
+    "        3: \"WaterDrops\",\n",
+    "        4: \"Wind\",\n",
+    "        5: \"Silence\",\n",
+    "        6: \"TreeFalling\",\n",
+    "        7: \"Helicopter\",\n",
+    "        8: \"VehicleEngine\",\n",
+    "        9: \"Axe\",\n",
+    "        10: \"Chainsaw\",\n",
+    "        11: \"Generator\",\n",
+    "        12: \"Handsaw\",\n",
+    "        13: \"Firework\",\n",
+    "        14: \"Gunshot\",\n",
+    "        15: \"WoodChop\",\n",
+    "        16: \"Whistling\",\n",
+    "        17: \"Speaking\",\n",
+    "        18: \"Footsteps\",\n",
+    "        19: \"Clapping\",\n",
+    "        20: \"Insect\",\n",
+    "        21: \"Frog\",\n",
+    "        22: \"BirdChirping\",\n",
+    "        23: \"WingFlaping\",\n",
+    "        24: \"Lion\",\n",
+    "        25: \"WolfHowl\",\n",
+    "        26: \"Squirrel\",\n",
+    "    }\n",
+    "    return {\n",
+    "        'class':sound_dict[output_data['class']],\n",
+    "        'confidence': \"{:.1%}\".format(output_data['confidence'])\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'class': 'Rain', 'confidence': '60.5%'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_to_human(output_data=output)"
    ]
   }
  ],
