--- a/models/sample_deploy.ipynb
+++ b/models/sample_deploy.ipynb
@@ -4,29 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://download.pytorch.org/whl/cu118, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: torch in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (2.2.2+cu118)\n",
-      "Requirement already satisfied: torchvision in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (0.17.2+cu118)\n",
-      "Requirement already satisfied: torchaudio in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (2.2.2+cu118)\n",
-      "Requirement already satisfied: filelock in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torch) (3.9.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.8.0 in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torch) (4.11.0)\n",
-      "Requirement already satisfied: sympy in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torch) (1.12)\n",
-      "Requirement already satisfied: networkx in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torch) (3.2.1)\n",
-      "Requirement already satisfied: jinja2 in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torch) (3.1.2)\n",
-      "Requirement already satisfied: fsspec in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torch) (2023.4.0)\n",
-      "Requirement already satisfied: numpy in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torchvision) (1.26.4)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from torchvision) (10.3.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from jinja2->torch) (2.1.3)\n",
-      "Requirement already satisfied: mpmath>=0.19 in d:\\001drexel\\99_hackathon\\4_codefest2024\\main\\philly-codefest\\.venv\\lib\\site-packages (from sympy->torch) (1.3.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
     "# check here for your version https://pytorch.org/get-started/locally/"
@@ -34,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,22 +104,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = convert_to_human(output_data=output)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'class': 'Rain', 'confidence': '60.5%'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "convert_to_human(output_data=output)"
+    "import json\n",
+    "with open('output.json', 'w') as f:\n",
+    "    json.dump(r\n",
+    ", f)"
    ]
   }
  ],
